[tool.poetry]
name = "mmfdocs"
version = "0.1.0"
description = ""
authors = ["andvikt <andvikt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
