[tool.poetry]
name = "mmfdocs"
version = "0.1.0"
description = ""
authors = ["andvikt <andvikt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.1.7"
mkdocstrings = "^0.17.0"
mkdocs-mermaid2-plugin = "^0.5.2"
pydantic = "^1.9.0"
astunparse = "^1.6.3"
mmf-meta = "0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
